# Ani-Me-Downloader

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  disclaimer.md  pyproject.toml  requirements.txt  requirments.txt  result.pkl  t.py
src/: constants.py  gui.py  main.py  proxy.py  pyproject.toml  requirements.txt  setup.py  utils.py
src/ani_me_downloader/: __main__.py  app.py  setup.py
src/ani_me_downloader/components/: __init__.py  anime_dialog.py  episode_grid_dialog.py  list_dialog.py  sync_dialog.py
src/ani_me_downloader/config/: config.py  paths.py
src/ani_me_downloader/core/: anime.py  episodes.py  identity.py  time_util.py  torrent.py
src/ani_me_downloader/download/: commands.py  resume.py  session.py
src/ani_me_downloader/metadata/: anilist.py  jikan.py  mal.py  orchestrator.py  watch_lookup.py
src/ani_me_downloader/persistence/: anime_repo.py  json_store.py  torrent_repo.py
src/ani_me_downloader/search/: nyaa.py  selector.py  uploader_rules.py
src/ani_me_downloader/services/: anime_service.py  anime_thread.py  compression_thread.py  coordinator.py  resolve_thread.py  run_thread.py  search_thread.py  torrent_thread.py
src/ani_me_downloader/state/: app_state.py
src/ani_me_downloader/view/: base_interface.py  constants.py  download_interface.py  image_cache.py  library_interface.py  main_window.py  notifications.py  search_interface.py  setting_interface.py  style_sheet.py  title_bar.py
src/app/common/: anime.py  config.py  q_utils.py  (+5 more)
src/data/: config.ini  config.json  proxy.txt  test_proxy.txt
(+54 files in other folders)
