[project]
name = "Ani-Me-Downloader"
version = "0.0.8"
description = "A simple and beautiful anime downloader and streamer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Added packages
    # GUI components
    "PyQt5==5.15.9",
    "PyQt-Fluent-Widgets==1.0.0",  # Fluent design for PyQt applications
    # Web requests
    "libtorrent",
    "requests",
    "bs4"  # BeautifulSoup for web scraping
]
